# Queue-Boss

./: .gitignore  Cargo.toml  angular.json  biome.json  package-lock.json  package.json  tsconfig.spec.json  wdio.conf.ts
.cargo/: mutants.toml
.claude/: epic.yaml
.github/workflows/: ci.yml  claude-review.yml  nightly-crossplatform.yml
crates/backends/: Cargo.toml
crates/backends/src/: lib.rs  sandbox.rs  simulator.rs
crates/backends/src/pgboss/: map.rs  mod.rs  queries.rs  rows.rs  seed.rs
crates/backends/tests/: pgboss_conformance.rs  pgboss_v11_conformance.rs  sandbox_conformance.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  clock.rs  conformance.rs  error.rs  lib.rs  model.rs  page.rs  testing.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
docs/: queue-boss-mvp-prd.md
docs/superpowers/plans/: 2026-07-21-queue-boss-skeleton-sandbox-plan.md  2026-07-23-hero-lifecycle-teaching-plan.md  2026-07-23-pgboss-read-path-plan.md
docs/superpowers/specs/: 2026-07-21-queue-boss-skeleton-sandbox-design.md  2026-07-23-hero-lifecycle-teaching-design.md  2026-07-23-pgboss-read-path-design.md
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  counts.rs  lib.rs  main.rs  poller.rs  state.rs
src-tauri/tests/: pgboss_command_integration.rs
src/app/: app-title-strategy.spec.ts  app-title-strategy.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.spec.ts  app.routes.ts
src/app/core/facades/: connection.facade.spec.ts  connection.facade.ts  connections.facade.spec.ts  connections.facade.ts  jobs.facade.spec.ts  jobs.facade.ts  queues.facade.spec.ts  (+1 more)
src/app/shell/: shell.component.css  shell.component.spec.ts  shell.component.ts
src/styles/: styles.spec.ts  tokens.css  tokens.spec.ts
src/testing/: setup-axe.ts
tests/e2e/: README.md  launch-smoke.e2e.ts  sandbox.e2e.ts
(+53 files in other folders)
