[package]
name = "queue-boss"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "queue_boss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qb-core = { path = "../crates/core" }
qb-backends = { path = "../crates/backends" }
tokio = { version = "1", features = ["rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "rt", "macros", "time"] }
async-trait = "0.1"
